# oakd-pi-viewer

./: README.md  pyproject.toml
src/oakd_viewer/: __main__.py  app.py  cache.py  config.py  mcap_reader.py  preprocess.py  processing.py  s3.py
static/: app.js  index.html  style.css
