[project]
name = "oakd-viewer"
version = "0.1.0"
description = "Web viewer for OAK-D Pi MCAP recordings stored in S3"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "boto3>=1.34.0",
    "mcap>=1.1.0",
    "lz4>=4.3.3",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oakd_viewer"]
